# redis-rust

./: .gitignore  .replit  BENCHMARK_RESULTS.md  CLAUDE.md  Cargo.toml  DELANCIE_PLAN.md  PERFORMANCE_COMPARISON.md  PERFORMANCE_PLAN_V2.md  README.md  perf_config.toml  replit.md  skills.md
bloodhound/: bloodhound.yaml  docker-compose.yml
docker/: Dockerfile
docker-benchmark/: Dockerfile.redis-rust  perf_config.toml
docs/: OBSERVABILITY.md
evolve/: README.md  __init__.py  candidate.py  config.py  evolution.py  fitness.py  harness.py  requirements.txt
evolve/results/: best_config.toml  evolution_history.json  gen_001.json  gen_002.json  gen_003.json
maelstrom/maelstrom/store/: current
scripts/: maelstrom_test.sh
src/io/: production.rs
src/metrics/: query.rs  state.rs
src/production/: adaptive_actor.rs  connection_optimized.rs  mod.rs  perf_config.rs  replicated_shard_actor.rs  replicated_state.rs  response_pool.rs  server_optimized.rs  sharded_actor.rs  ttl_manager.rs
src/redis/: commands.rs  data.rs  lua.rs  tests.rs
src/replication/: anti_entropy.rs  mod.rs
src/simulator/: connection.rs  dst_integration.rs  harness.rs  mod.rs  multi_node.rs  partition_tests.rs
src/streaming/: compaction.rs  integration.rs  persistence.rs  write_buffer.rs
tests/: anti_entropy_tests.rs  connection_simulation_test.rs  redis_equivalence_test.rs  streaming_persistence_test.rs
