[package]
name = "redis-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
fnv = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bin]]
name = "redis-sim"
path = "src/main.rs"

[[bin]]
name = "redis-server"
path = "src/bin/server.rs"

[[bin]]
name = "test-client"
path = "src/bin/test_client.rs"

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"

[[bin]]
name = "quick-benchmark"
path = "src/bin/quick_benchmark.rs"

[[bin]]
name = "maelstrom-kv"
path = "src/bin/maelstrom_kv.rs"

[lib]
name = "redis_sim"
path = "src/lib.rs"
